fixed overlapping a bit for now

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -3,13 +3,13 @@ body {
 }
 
 .navbar__container {
-  position: absolute;
+  /* position: absolute; */
   height: 100px;
-  background-color: aqua;
+  /* background-color: aqua; */
 }
 
 .container__real{
-position:absolute;
+/* position:absolute; */
 width: 100%;
 height: 77px;
 left: 0px;
